###############################################################################
# Loaders
###############################################################################

load("@rules_cc//cc:defs.bzl", "cc_binary")

###############################################################################
# Binaries
###############################################################################

cc_binary(
    name = "superelevation",
    srcs = ["superelevation.cc"],
    data = [
        "//resources:all",
    ],
    deps = [
        "@maliput//:api",
        "@maliput_malidrive//:builder",
        "@maliput_malidrive//:loader"
    ],
)
