module(
    name = "maliput_bazel",
    compatibility_level = 1,
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "maliput", version = "1.2.0")
bazel_dep(name = "maliput_malidrive", version = "0.2.1")

# local_path_override(module_name = "maliput", path = "../../maliput")
# local_path_override(module_name = "maliput_malidrive", path = "../../maliput_malidrive")
