module(
    name = "maliput_cc_examples",
    compatibility_level = 1,
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "maliput", version = "1.1.1")
bazel_dep(name = "maliput_malidrive", version = "0.1.4")

# local_path_override(module_name = "maliput", path = "../../maliput")