[tool.poetry]
name = "maliput_py_examples"
version = "0.1.0"
description = "maliput python examples"
authors = ["Daniel Stonier"]
maintainers = ["Daniel Stonier <daniel.stonier@woven-planet.global>"]
readme = "README.md"
license = "BSD-3"
homepage = "https://github.com/stonier/maliput_examples"
repository = "https://github.com/stonier/maliput_examples"
documentation = "https://github.com/stonier/maliput_examples"
packages = [
    { include = "maliput_py_examples" },
]
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries',
    'Private :: Do Not Upload'  # Pypi will catch this and reject it if an upload is attempted
]
keywords=["maliput"]

[tool.poetry.dependencies]
python = "^3.8"
# TODO(daniel.stonier) shift to pypi once available, also fix maliput's version when published
maliput = { version = "1.1.1" }
maliput_malidrive = { version = "0.1.4" }

[tool.poetry.scripts]
maliput-inertial-to-road = "maliput_py_examples.inertial_to_road:main"
maliput-superelevation = "maliput_py_examples.superelevation:main"
maliput-malidrive-ids = "maliput_py_examples.malidrive_ids:main"

# [[tool.poetry.source]]
# name = "test"
# url = "https://test.pypi.org/simple/"
# priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
